--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
 	<div class="box2 card">
 		<div class="card-heading">  Team Builder  </div><br>
    	<div class="card-body">Scans our talent network to create the optimal team for your project</div>
-  		<img src="./images/icon-team-builder.svg"/>
+  		<img src="./images/icon-team-builder.svg" alt="Team builder"/>
 	</div>
 	
 	<div class="box3 card">
 		<div class="card-heading">Supervisor</div><br>
    	<div class="card-body">Monitors activity to identify project roadblocks</div>
-		<img src="./images/icon-supervisor.svg"/>
+		<img src="./images/icon-supervisor.svg" alt="Supervisor"/>
 	</div>
 	
 	<div class="box4 card">
 		<div class="card-heading">  Calculator  </div><br>
 		<div class="card-body">Uses data from past projects to provide better delivery estimates</div>
-		<img src="./images/icon-calculator.svg"/>	
+		<img src="./images/icon-calculator.svg" alt="Calculator"/>	
 	</div>
 
 	<div class="box5 card">
 		<div class="card-heading">  Karma  </div><br>
 	   <div class="card-body">Regularly evaluates our talent to ensure quality</div>
-	   <img src="./images/icon-karma.svg"/>
+	   <img src="./images/icon-karma.svg" alt="Karma"/>
 	</div>
 
   <footer style="text-align: 	center;">
